correction verssion tablette

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -242,24 +242,25 @@ main {
     .fonctionnement{
 
         .fonctionnement.container{ 
-            display: flex;
-            flex-flow: row nowrap;
-            justify-content: space-between;
+          
             padding: 2em;
             .option {
-                width:30%;
+                width:70%;
                 .context{
                     line-height: 6rem;
                     .name {
                 
-                        margin-left: 0.5em;
+                        margin-left: 1em;
                         font-size: 1.25em;
 
                     }
                     .icon {
                       
-                        font-size: 1.2em;
+                        font-size: 2.5em;
                        
+                    }
+                    .num{
+                        font-size: 0.6em;
                     }
 
                 }
